# GNUDO-cpp-dbdriver-sqlite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  TODO.md  arch.md
src/: CMakeLists.txt  Makefile  TODO  dbdefs.hpp  gnudo.cpp  gnudo.h  gnudo.hpp  gnudo_nsp.h  main.cpp  managers.cpp  managers.hpp  objects.cpp  objects.hpp  socket.cpp  socket.h  test.cpp  test.db
src/abstract/: README.md  gnudo.hpp  managers.hpp  objects.hpp
src/old/: db.hpp  managers.hpp  objects.hpp
src/sqlite/: Makefile  dbdefs.hpp  gnudo.hpp  managers.hpp  objects.hpp
src/test/: test.cpp  test.db
